Сайт сделан, делаю адаптив

--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -4,3 +4,27 @@
   margin: 92px auto 0 auto;
   row-gap: 80px;
 }
+
+@media screen and (max-width: 1024px) {
+  .places {
+    max-width: 928px;
+    padding-left: 48px;
+    padding-right: 48px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .places {
+    max-width: 728px;
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .places {
+    max-width: 320px;
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+}
