--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -4,3 +4,9 @@
   font-size: 24px;
   line-height: 28px;
 }
+
+@media screen and (max-width: 320px) {
+  .header__link {
+    font-size: 18px;
+  }
+}
