--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,8 +1,23 @@
 .header {
+  box-sizing: border-box;
   margin: 0 auto;
   padding-left: 48px;
   padding-right: 48px;
   max-width: 1280px;
   display: flex;
   justify-content: space-between;
+}
+
+@media screen and (max-width: 720px) {
+  .header {
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .header {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
 }
