--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -2,6 +2,19 @@
   margin: 0;
   font-weight: 900;
   font-size: 54px;
-  line-height: 58px;
+  line-height: 1.07;
   margin-bottom: 40px;
+}
+
+@media screen and (max-width: 600px) {
+  .intro__title {
+    font-size: 10vw;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .intro__title {
+    font-size: 32px;
+    line-height: 1.09;
+  }
 }
