--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -6,3 +6,10 @@
   padding-top: 28px;
   padding-bottom: 24px;
 }
+
+@media screen and (max-width: 320px) {
+  .page {
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
+}
