--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -6,3 +6,25 @@
   padding-left: 48px;
   padding-right: 48px;
 }
+
+@media screen and (max-width: 768px) {
+  .photo-grid {
+    gap: 14px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .photo-grid {
+    padding-left: 24px;
+    padding-right: 24px;
+    gap: 16px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .photo-grid {
+    padding-left: 16px;
+    padding-right: 16px;
+    gap: 12px;
+  }
+}
