--- a/blocks/places/place/__title/places__place__title.css
+++ b/blocks/places/place/__title/places__place__title.css
@@ -4,3 +4,23 @@
   font-size: 72px;
   line-height: 76px;
 }
+
+@media screen and (max-width: 1023px) {
+  .places__place__title {
+    font-size: 5vw;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .places__place__title {
+    font-size: 42px;
+    line-height: 46px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .places__place__title {
+    font-size: 32px;
+    line-height: 35px;
+  }
+}
