--- a/blocks/places/place/image/places__place__image.css
+++ b/blocks/places/place/image/places__place__image.css
@@ -1,6 +1,23 @@
 .places__place__image {
   max-width: 460px;
-  min-width: 320px;
   width: 100%;
   object-fit: cover;
+}
+
+@media screen and (max-width: 1024px) {
+  .places__place__image {
+    max-width: 440px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .places__place__image {
+    max-width: 340px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .places__place__image {
+    max-width: 320px;
+  }
 }
