--- a/blocks/places/place/places__place.css
+++ b/blocks/places/place/places__place.css
@@ -3,6 +3,30 @@
   width: 100%;
   row-gap: 40px;
   column-gap: 48px;
-  grid-template-columns: repeat(2, minmax(300px, max-content));
+  grid-template-columns: repeat(2, minmax(282px, max-content));
   justify-content: center;
+}
+
+@media screen and (max-width: 1024px) {
+  .places__place {
+    column-gap: 32px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .places__place {
+    column-gap: 28px;
+  }
+}
+
+@media screen and (max-width: 660px) {
+  .places__place {
+    grid-template-columns: repeat(auto-fit, minmax(282px, 50%));
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .places__place {
+    row-gap: 32px;
+  }
 }
