--- a/pages/index.css
+++ b/pages/index.css
@@ -35,3 +35,14 @@
 @import url(../blocks/places/place/__website/__url-heading/places__place__website__url-heading.css);
 @import url(../blocks/places/place/__website/__link/places__place__website__link.css);
 @import url(../blocks/places/place/__paragraph/places__place__paragraph.css);
+
+@import url(../blocks/cover/cover.css);
+@import url(../blocks/cover/__background/cover__background.css);
+@import url(../blocks/cover/__title/cover__title.css);
+@import url(../blocks/cover/__subtitle/cover__subtitle.css);
+@import url(../blocks/cover/__overlay/cover__overlay.css);
+
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__links/footer__links.css);
+@import url(../blocks/footer/__link/footer__link.css);
+@import url(../blocks/footer/__author/footer__author.css);
