--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -6,3 +6,13 @@
   padding-left: 42px;
   padding-right: 42px;
 }
+
+@media screen and (max-width: 720px) {
+  .footer {
+    margin: 64px auto auto auto;
+    flex-direction: column;
+    row-gap: 48px;
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+}
