--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -23,3 +23,9 @@
   opacity: 0.8;
   transition: opacity 0.5s ease-in;
 }
+
+@media screen and (max-width: 1184px) {
+  .cover__background {
+    min-height: 62vw;
+  }
+}
