--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -8,3 +8,32 @@
   max-width: 560px;
   text-align: center;
 }
+
+@media screen and (max-width: 1024px) {
+  .cover__title {
+    padding-top: 195px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .cover__title {
+    padding-top: 115px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .cover__title {
+    padding-top: 15vw;
+    font-size: 9vw;
+    line-height: 10vw;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .cover__title {
+    padding-top: 33px;
+    max-width: 288px;
+    font-size: 32px;
+    line-height: 35px;
+  }
+}
