--- a/blocks/footer/__author/footer__author.css
+++ b/blocks/footer/__author/footer__author.css
@@ -6,3 +6,10 @@
   text-align: right;
   align-self: center;
 }
+
+@media screen and (max-width: 720px) {
+  .footer__author {
+    align-self: start;
+    line-height: 14px;
+  }
+}
