--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -2,4 +2,12 @@
   display: flex;
   column-gap: 18px;
   padding: 0;
+  margin: 0;
+}
+
+@media screen and (max-width: 720px) {
+  .footer__links {
+    flex-direction: column;
+    row-gap: 32px;
+  }
 }
