--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -5,6 +5,12 @@
   min-width: 320px;
   padding-top: 28px;
   padding-bottom: 24px;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
 }
 
 @media screen and (max-width: 320px) {
