--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -9,12 +9,7 @@
 
 @media screen and (max-width: 768px) {
   .photo-grid {
-    gap: 14px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .photo-grid {
+    margin: 88px auto 0 auto;
     padding-left: 24px;
     padding-right: 24px;
     gap: 16px;
@@ -23,6 +18,7 @@
 
 @media screen and (max-width: 320px) {
   .photo-grid {
+    margin: 64px auto 0 auto;
     padding-left: 16px;
     padding-right: 16px;
     gap: 12px;
