--- a/blocks/places/place/__paragraph/places__place__paragraph.css
+++ b/blocks/places/place/__paragraph/places__place__paragraph.css
@@ -10,3 +10,23 @@
 .places__place__paragraph:nth-child(2n) {
   margin-bottom: 0;
 }
+
+@media screen and (max-width: 660px) {
+  .places__place__paragraph {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 660px) {
+  .places__place__paragraph {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .places__place__paragraph {
+    font-size: 16px;
+    line-height: 163%;
+  }
+}
