--- a/blocks/places/place/__website/__link/places__place__website__link.css
+++ b/blocks/places/place/__website/__link/places__place__website__link.css
@@ -5,3 +5,10 @@
   line-height: 22px;
   color: #FFFFFF;
 }
+
+@media screen and (max-width: 660px) {
+  .places__place__website__link {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+}
