--- a/blocks/places/place/__website/__url-heading/places__place__website__url-heading.css
+++ b/blocks/places/place/__website/__url-heading/places__place__website__url-heading.css
@@ -6,3 +6,10 @@
   line-height: 12px;
   letter-spacing: 2px;
 }
+
+@media screen and (max-width: 660px) {
+  .places__place__website__url-heading {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+}
