--- a/blocks/places/place/image/places__place__image.css
+++ b/blocks/places/place/image/places__place__image.css
@@ -1,23 +1,23 @@
 .places__place__image {
-  max-width: 460px;
   width: 100%;
   object-fit: cover;
 }
 
 @media screen and (max-width: 1024px) {
   .places__place__image {
-    max-width: 440px;
+    min-height: 440px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .places__place__image {
-    max-width: 340px;
+    min-height: 340px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .places__place__image {
-    max-width: 320px;
+    min-height: 320px;
+    margin-bottom: 32px;
   }
 }
