--- a/blocks/places/place/places__place.css
+++ b/blocks/places/place/places__place.css
@@ -1,32 +1,27 @@
 .places__place {
   display: grid;
   width: 100%;
-  row-gap: 40px;
-  column-gap: 48px;
-  grid-template-columns: repeat(2, minmax(282px, max-content));
-  justify-content: center;
+  grid-column-gap: 40px;
+  grid-template-columns: 460px 1fr;
+  grid-template-rows: repeat(3, min-content);
 }
 
 @media screen and (max-width: 1024px) {
   .places__place {
-    column-gap: 32px;
+    grid-column-gap: 32px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .places__place {
-    column-gap: 28px;
+    grid-template-columns: 340px 1fr;
+    grid-column-gap: 28px;
   }
 }
 
 @media screen and (max-width: 660px) {
   .places__place {
-    grid-template-columns: repeat(auto-fit, minmax(282px, 50%));
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .places__place {
-    row-gap: 32px;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(6, min-content);
   }
 }
