--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -5,3 +5,15 @@
   background-size: 100%;
   background-repeat: no-repeat;
 }
+
+@media screen and (max-width: 768px) {
+  .cover {
+    margin: 90px auto 0 auto;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .cover {
+    margin: 66px auto 0 auto;
+  }
+}
