--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -7,6 +7,12 @@
   padding-right: 42px;
 }
 
+@media screen and (max-width: 768px) {
+  .footer {
+    margin: 88px auto auto auto;
+  }
+}
+
 @media screen and (max-width: 720px) {
   .footer {
     margin: 64px auto auto auto;
