--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -7,6 +7,12 @@
   padding-right: 48px;
 }
 
+@media screen and (max-width: 1024x) {
+  .photo-grid {
+    gap: 14px;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .photo-grid {
     margin: 88px auto 0 auto;
