--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -3,6 +3,14 @@
   font-weight: 400;
   font-size: 24px;
   line-height: 28px;
+  color: #FFF;
+}
+
+.header__link:hover {
+  opacity: 0.8;
+  transition-property: opacity;
+  transition-duration: 0.5s;
+  transition-timing-function: ease-in;
 }
 
 @media screen and (max-width: 320px) {
