--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -5,7 +5,7 @@
   text-align: center;
   margin: 0 auto;
   max-width: 720px;
-  width: 100%
+  width: 100%;
 }
 
 @media screen and (max-width: 767px) {
