--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,4 +1,4 @@
-.places__place__title {
+.place__title {
   margin: 0;
   margin-bottom: 48px;
   font-weight: 900;
@@ -7,21 +7,21 @@
 }
 
 @media screen and (max-width: 768px) {
-  .places__place__title {
+  .place__title {
     font-size: 42px;
     line-height: 46px;
   }
 }
 
 @media screen and (max-width: 660px) {
-  .places__place__title {
+  .place__title {
     padding-left: 16px;
     padding-right: 16px;
   }
 }
 
 @media screen and (max-width: 320px) {
-  .places__place__title {
+  .place__title {
     font-size: 32px;
     line-height: 35px;
     margin-bottom: 32px;
