--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,4 +1,4 @@
-.places__place {
+.place {
   display: grid;
   width: 100%;
   grid-column-gap: 40px;
@@ -7,20 +7,20 @@
 }
 
 @media screen and (max-width: 1024px) {
-  .places__place {
+  .place {
     grid-column-gap: 32px;
   }
 }
 
 @media screen and (max-width: 768px) {
-  .places__place {
+  .place {
     grid-template-columns: 340px 1fr;
     grid-column-gap: 28px;
   }
 }
 
 @media screen and (max-width: 660px) {
-  .places__place {
+  .place {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(6, min-content);
   }
