--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -8,6 +8,8 @@
 @media screen and (max-width: 1024px) {
   .places {
     max-width: 928px;
+    padding-left: 48px;
+    padding-right: 48px;
   }
 }
 
@@ -16,12 +18,23 @@
     margin: 88px auto 0 auto;
     row-gap: 72px;
     max-width: 728px;
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+}
+
+@media screen and (max-width: 660px) {
+  .places {
+    padding-left: 0;
+    padding-right: 0;
   }
 }
 
 @media screen and (max-width: 320px) {
   .places {
     margin: 64px auto 0 auto;
+    padding-left: 0;
+    padding-right: 0;
     row-gap: 50px;
     max-width: 320px;
   }
