--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -8,10 +8,11 @@
   width: 100%;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
   .lead__title {
-    font-size: 10vw;
-    line-height: 1.1;
+    font-size: calc(40px + (96 - 40) * ((100vw - 320px) / (768 - 320)));
+    line-height: calc(44px + (100 - 44) * ((100vw - 320px) / (768 - 320)));
+    max-width: calc(288px + (720 - 288) * ((100vw - 320px) / (768 - 320)));
   }
 }
 
