--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -3,8 +3,8 @@
   border-style: none;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 768px) {
   .header__logo {
-    max-width: 142px;
+    max-width: calc(142px + (176 - 142) * ((100vw - 320px) / (768 - 320)));
   }
 }
