--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -8,7 +8,8 @@
 
 @media screen and (max-width: 600px) {
   .intro__title {
-    font-size: 10vw;
+    font-size: calc(32px + (54 - 32) * ((100vw - 320px) / (600 - 320)));
+    line-height: calc(35px + (58 - 35) * ((100vw - 320px) / (600 - 320)));
   }
 }
 
