--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -8,9 +8,12 @@
   max-width: 640px;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 768px) {
   .lead__subtitle {
-    font-size: 5vw;
+    font-size: calc(16px + (30 - 16) * ((100vw - 320px) / (768 - 320)));
+    line-height: calc(20px + (36 - 20) * ((100vw - 320px) / (768 - 320)));
+    max-width: calc(288px + (640 - 288) * ((100vw - 320px) / (768 - 320)));
+    margin-top: calc(16px + (32 - 16) * ((100vw - 320px) / (768 - 320)));
   }
 }
 
