--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -8,8 +8,8 @@
 @media screen and (max-width: 1024px) {
   .places {
     max-width: 928px;
-    padding-left: 48px;
-    padding-right: 48px;
+    padding-left: calc(24px + (48 - 24) * ((100vw - 768px) / (1024 - 768)));
+    padding-right: calc(24px + (48 - 24) * ((100vw - 768px) / (1024 - 768)));
   }
 }
 
@@ -18,8 +18,6 @@
     margin: 88px auto 0 auto;
     row-gap: 72px;
     max-width: 728px;
-    padding-left: 24px;
-    padding-right: 24px;
   }
 }
 
@@ -33,8 +31,6 @@
 @media screen and (max-width: 320px) {
   .places {
     margin: 64px auto 0 auto;
-    padding-left: 0;
-    padding-right: 0;
     row-gap: 50px;
     max-width: 320px;
   }
