--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -11,21 +11,16 @@
 
 @media screen and (max-width: 1024px) {
   .cover__title {
-    padding-top: 195px;
+    padding-top: calc(115px + (195 - 115) * ((100vw - 768px) / (1024 - 768)));
   }
 }
 
 @media screen and (max-width: 768px) {
   .cover__title {
-    padding-top: 115px;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .cover__title {
-    padding-top: 15vw;
-    font-size: 9vw;
-    line-height: 10vw;
+    padding-top: calc(33px + (115 - 33) * ((100vw - 320px) / (768 - 320)));
+    font-size: calc(32px + (72 - 32) * ((100vw - 320px) / (768 - 320)));
+    line-height: calc(35px + (76 - 35) * ((100vw - 320px) / (768 - 320)));
+    max-width: calc(288px + (560 - 288) * ((100vw - 320px) / (768 - 320)));
   }
 }
 
