--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,8 +1,9 @@
 .intro__list {
   list-style-type: none;
   margin-top: 33px;
+  margin-bottom: 0;
   padding: 0;
-  font-weight: 700;
+  font-weight: 400;
   font-size: 12px;
   line-height: 18px;
 }
