--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -5,6 +5,7 @@
   max-width: 1280px;
   padding-left: 48px;
   padding-right: 48px;
+  grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
 }
 
 @media screen and (max-width: 1024px) {
