--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -7,18 +7,13 @@
   width: 100%;
 }
 
-.place__paragraph:nth-child(2n) {
+.place__paragraph:last-child {
   margin-bottom: 0;
 }
 
 @media screen and (max-width: 660px) {
   .place__paragraph {
     width: 90%;
-  }
-}
-
-@media screen and (max-width: 660px) {
-  .place__paragraph {
     padding-left: 16px;
     padding-right: 16px;
   }
@@ -27,6 +22,5 @@
 @media screen and (max-width: 320px) {
   .place__paragraph {
     font-size: 16px;
-    line-height: 163%;
   }
 }
