--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,23 +1,25 @@
 .header {
   box-sizing: border-box;
   margin: 0 auto;
-  padding-left: 48px;
-  padding-right: 48px;
+  margin-left: 48px;
+  margin-right: 48px;
   max-width: 1280px;
   display: flex;
   justify-content: space-between;
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 768px) {
   .header {
-    padding-left: 24px;
-    padding-right: 24px;
+    margin-left: 24px;
+    margin-right: 24px;
+    max-width: 720px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .header {
-    padding-left: 16px;
-    padding-right: 16px;
+    margin-left: 16px;
+    margin-right: 16px;
+    max-width: 288px;
   }
 }
