--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,10 +1,8 @@
 .photo-grid {
   display: grid;
   gap: 16px;
-  margin: 92px auto 0 auto;
-  max-width: 1280px;
-  padding-left: 48px;
-  padding-right: 48px;
+  margin: 92px 48px 0 48px;
+  max-width: 1184px;
   grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
 }
 
@@ -16,18 +14,14 @@
 
 @media screen and (max-width: 768px) {
   .photo-grid {
-    margin: 88px auto 0 auto;
-    padding-left: 24px;
-    padding-right: 24px;
+    margin: 88px 24px 0 24px;
     gap: 16px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .photo-grid {
-    margin: 64px auto 0 auto;
-    padding-left: 16px;
-    padding-right: 16px;
+    margin: 64px 16px 0 16px;
     gap: 12px;
   }
 }
