--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,9 +1,15 @@
 .footer {
-  margin: 92px 42px auto 42px;
+  margin: 92px auto auto auto;
   display: flex;
   align-self: center;
   justify-content: space-between;
   max-width: 1184px;
+}
+
+@media screen and (max-width: 1280px) {
+  .footer {
+    margin: 92px 42px auto 42px;
+  }
 }
 
 @media screen and (max-width: 768px) {
