--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,11 +1,17 @@
 .header {
   box-sizing: border-box;
   margin: 0 auto;
-  margin-left: 48px;
-  margin-right: 48px;
   max-width: 1280px;
   display: flex;
   justify-content: space-between;
+  align-self: center;
+}
+
+@media screen and (max-width: 1280px) {
+  .header {
+    margin-left: 48px;
+    margin-right: 48px;
+  }
 }
 
 @media screen and (max-width: 768px) {
