--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,9 +1,15 @@
 .photo-grid {
   display: grid;
   gap: 16px;
-  margin: 92px 48px 0 48px;
+  margin: 92px auto 0 auto;
   max-width: 1184px;
   grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
+}
+
+@media screen and (max-width: 1280px) {
+  .photo-grid {
+    margin: 92px 48px 0 48px;
+  }
 }
 
 @media screen and (max-width: 1024px) {
